// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`beautify 1`] = `
"Error
    Object.<anonymous> (packages/error/test/index.js:36:17)"
`;

exports[`beautify with title 1`] = `
"Error: title
    Object.<anonymous> (packages/error/test/index.js:45:17)"
`;

exports[`getStack: -1 1`] = `
"Error
    at c (/packages/error/test/index.js:20:17)
    at c (/packages/error/test/index.js:16:10)
    at b (/packages/error/test/index.js:12:10)
    at Object.a (/packages/error/test/index.js:26:11)
    at new Promise (<anonymous>)"
`;

exports[`getStack: 0 1`] = `
"Error
    at c (/packages/error/test/index.js:20:17)
    at c (/packages/error/test/index.js:16:10)
    at b (/packages/error/test/index.js:12:10)
    at Object.a (/packages/error/test/index.js:27:11)
    at new Promise (<anonymous>)"
`;

exports[`getStack: 1 1`] = `
"Error
    at c (/packages/error/test/index.js:20:17)
    at c (/packages/error/test/index.js:16:10)
    at b (/packages/error/test/index.js:12:10)
    at Object.a (/packages/error/test/index.js:28:11)
    at new Promise (<anonymous>)"
`;

exports[`getStack: 2 1`] = `
"Error
    at c (/packages/error/test/index.js:16:10)
    at b (/packages/error/test/index.js:12:10)
    at Object.a (/packages/error/test/index.js:29:11)
    at new Promise (<anonymous>)"
`;

exports[`getStack: 3 1`] = `
"Error
    at b (/packages/error/test/index.js:12:10)
    at Object.a (/packages/error/test/index.js:30:11)
    at new Promise (<anonymous>)"
`;

exports[`getStack: undefined 1`] = `
"Error
    at c (/packages/error/test/index.js:20:17)
    at c (/packages/error/test/index.js:16:10)
    at b (/packages/error/test/index.js:12:10)
    at Object.a (/packages/error/test/index.js:25:11)
    at new Promise (<anonymous>)"
`;

exports[`handle just the title fine 1`] = `
"multine
error
message"
`;

exports[`handle multine error message correctly 1`] = `
"Error: multine
error
message
    Object.<anonymous> (packages/error/test/index.js:54:17)"
`;

exports[`keep at least one stack line 1`] = `
"Error
    Object.asyncJestTest (../../../AppData/Local/Yarn/Cache/v4/npm-jest-jasmine2-24.8.0-a9c7e14c83dd77d8b15e820549ce8987cc8cd898/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:102:37)"
`;
